# cpmpack

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  cpmpack.json
example/src/example/: example.cpp
example/src/myLib/: myLib.cpp  myLib.h
templates/: entry_point_header_tests.cpp.in  pkgfile.pc.in
